# Physical-AI-Humanoid-Robotics-book

./: .gitignore  .vercelignore  404.html  DEPLOYMENT_READY.md  README_DEPLOYMENT.txt  VERCEL_DEPLOYMENT.md  VERCEL_SETUP.md  app.py  chatbot.py  deploy.ps1  deploy.sh  embed_docusaurus.py  index.html  minimal_backend.py  mock_backend.py  package-lock.json  package.json  qdrant_client_setup.py  qdrant_http_test.py  qdrant_setup_instructions.py  rag_engine.py  requirements.txt  sitemap.xml  test_minimal_app.py  vector_storage.py  vercel.json
.claude/: settings.local.json
.specify/: plan.md
api/: index.py  requirements.txt
backend/: .env.example  .flake8  __init__.py  agent.py  app.py  minimal_requirements.txt  pyproject.toml  rag_engine.py  requirements.txt
backend/config/: __init__.py  settings.py
backend/embeddings/: __init__.py  chunking.py  embedding_pipeline.py
backend/models/: __init__.py  document_chunk.py  query.py  response.py  session.py
backend/scripts/: index_documents.py
backend/services/: __init__.py  citation_service.py  embedding_service.py  rag_agent.py  retrieval_service.py  session_service.py
backend/tests/: test_citation_service.py  test_rag_agent.py  test_retrieval_service.py  test_session_service.py
backend/utils/: __init__.py  exceptions.py  logger.py
blog/: atom.xml  index.html  rss.xml
frontend/: chatbot.py
markdown-page/: index.html
physical-ai-humanoid-robotics/: .env.production  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  vercel.json
rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+226 files in other folders)
